--- a/group 46/level 36/homework/task2/index.html
+++ b/group 46/level 36/homework/task2/index.html
@@ -7,18 +7,15 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 20px;
         }
 
         table {
             width: 100%;
             border-collapse: collapse;
-            margin-bottom: 20px;
         }
 
         table th, table td {
             border: 1px solid #ddd;
-            padding: 8px;
             text-align: left;
         }
 
@@ -32,7 +29,7 @@
         }
 
         table tr:hover {
-            background-color: #f1f1f1;
+            background-color: #929191;
         }
 
         .source {
